# OpenEI

./: .env.example  .gitignore  BUGFIX_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  main.py  pyproject.toml  robot.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: dance_config.py  runtime_config.py
core/: __init__.py  choreographer.py
dance/: __init__.py  action_library.py  robot_controller.py
docs/: adapters.md  api_contracts.md  architecture.md  demo_rehearsal.md  demo_video_script.md  model_providers.md  observability.md  quickstart.md  release_playbook.md  ros2.md  scenarios.md  site.md  skills.md
docs/cleanup/: decision-matrix.md  merge-candidates.md
examples/http_robot/: mock_http_adapter.py
examples/image_input/: run_image_task.py
examples/minimal_robot/: README.md  adapter.py  robot.yaml  scenario.json
examples/mqtt_robot/: mock_mqtt_adapter.py
examples/ros2_template/: robot_adapter.py
examples/serial_robot/: README.md
openei/: __init__.py  adapters.py  audit.py  cli.py  contracts.py  default_skills.py  events.py  models.py  planning.py  providers.py  quickstart.py  replay.py  reports.py  results.py  robots.py  runtime.py  scenario.py  skills.py  tasks.py
tests/: test_command_parsing.py  test_openei_mature_runtime.py  test_openei_release_depth.py  test_openei_runtime.py  test_openei_workbench.py
utils/: logger.py
voice/: assistant.py  intents.py  speech_recognition.py  text_to_speech.py
(+13 files in other folders)
