[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openei"
version = "0.1.0"
description = "Lightweight embodied agent runtime for low-cost real robots"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "OpenEI Contributors" }]
dependencies = [
    "numpy>=1.21.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
audio = ["librosa>=0.10.0", "numpy>=1.21.0", "pyaudio>=0.2.11"]
dev = ["pytest>=7.0.0"]
mqtt = ["paho-mqtt>=1.6.0"]

[project.scripts]
openei = "openei.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openei*", "config*", "core*", "dance*", "voice*", "utils*"]
